--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,69 @@
 <resources>
 
     <string name="app_name">XSWDStudent</string>
-    <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <!-- Upgrade -->
+    <string name="upgrade_url">software/Version?name=AkCustom</string>
+
+    <!-- StartFragment -->
+    <string name="skip">跳过 >>></string>
+
+    <!-- LoginFragment -->
+    <integer name="user_account_maxlength">30</integer>
+    <integer name="user_password_maxlength">30</integer>
+
+    <string name="username">手机号/邮箱</string>
+    <string name="password">密码</string>
+    <string name="login">登陆</string>
+    <string name="no_username">您还没有账号？</string>
+    <string name="soon_register">马上注册</string>
+    <string name="copyright">&#160;@凯赛科技 版权所有</string>
+
+    <!-- RegisterFragment -->
+    <string name="register">注册</string>
+    <string name="registersdd">课程设置</string>
+    <string name="registerr">个人资料</string>
+    <string name="registerwr">我的学生</string>
+    <string name="nickname">昵称</string>
+    <string name="repeat_password">设置密码</string>
+    <string name="vertification">请输入验证码</string>
+    <string name="next_step">下一步</string>
+    <string name="complete_register">完成注册</string>
+    <string name="get_time">60秒</string>
+
+    <!-- RegisterBaseInfoFragment -->
+    <string name="register_baseinfo">完善个人资料</string>
+    <string name="register_baseinfo_text">根据您的资料提供合理的健康指导</string>
+    <string name="register_baseinfo_headportrait">上传头像</string>
+    <string name="register_baseinfo_birth">出生日期</string>
+    <string name="register_baseinfo_sex">性别</string>
+    <string name="register_baseinfo_submit">注册并登陆</string>
+    <string name="register_baseinfo_state">注册就表示同意</string>
+    <string name="register_baseinfo_clause"><a href="http://kaisr.vicp.cc:8085/ossCache/123825/0/d6776bc5b04946b.html">《使用条款 和 隐私政策》</a></string>
+    <!-- 头像本地保存目录以及文件名规则 -->
+    <string name="user_headportrait_dir">headportrait</string>
+    <string name="user_headportrait_filename">headportrait_%s.jpg</string>
+
+    <integer name="user_headportrait_width">300</integer>
+    <integer name="user_headportrait_height">300</integer>
+    <integer name="memo_photo_width">960</integer>
+    <integer name="memo_photo_height">1280</integer>
+
+    <!-- ForgetPassWordFragment -->
+    <string name="forget_password">忘记密码</string>
+    <string name="confirm">确认</string>
+
+    <!-- AcchivesFragment -->
+    <string name="checkup_report">"体检报告"</string>
+    <string name="self_monitor">"自我检测"</string>
+    <string name="case_file">"病历档案"</string>
+    <string name="grow_up">"成长记录"</string>
+    <string name="sunday">日</string>
+    <string name="monday">一</string>
+    <string name="thesday">二</string>
+    <string name="wednesday">三</string>
+    <string name="thursday">四</string>
+    <string name="friday">五</string>
 
 </resources>
